nav-bar and responsive parameter

--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
       padding: 0;
       margin: 0;
       font-family: 'Anonymous Pro', monospace;
+      border: 1px solid pink;
     }
   </style>
   <title>Iron Bike</title>
