--- a/public/index.html
+++ b/public/index.html
@@ -7,13 +7,13 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Archivo:wght@500&display=swap" rel="stylesheet"> 
+<link href="https://fonts.googleapis.com/css2?family=Archivo:wght@500&display=swap" rel="stylesheet"> 
   <style>
     * {
       padding: 0;
       margin: 0;
-      font-family: 'Anonymous Pro', monospace;
-      border: 1px solid pink;
+      font-family: 'Archivo', sans-serif;
+      /* border: 1px solid pink; */
     }
   </style>
   <title>Iron Bike</title>
