--- a/public/index.html
+++ b/public/index.html
@@ -23,6 +23,7 @@
         padding: 0;
         margin: 0;
         font-family: "Archivo", sans-serif;
+        box-sizing: border-box;
         /* border: 1px solid pink; */
       }
     </style>
